--- a/public/fontDMSans/DMSans.css
+++ b/public/fontDMSans/DMSans.css
@@ -7,3 +7,7 @@
   font-family: "DMSans_B";
   src: url('./DMSans-Bold.ttf');
 }
+@font-face {
+  font-family: "Mon";
+  src: url('./MonumentExtended-Regular.otf') format("opentype");
+}
